[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Ui/539_splash_bg_no_foliage1_png$0e838b1536a04b393476e18dcd80fb611220656200.png" type="Texture" id=1]
[ext_resource path="res://Scenes/MainUI/Shop/Recieved2.gd" type="Script" id=2]
[ext_resource path="res://Assets/Font/FredokaOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Ui/Common.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sound/Whip.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sound/Whip2.ogg" type="AudioStream" id=6]
[ext_resource path="res://Themes/MenuInput.tres" type="StyleBox" id=7]
[ext_resource path="res://Themes/MenuDisabled.tres" type="StyleBox" id=8]

[sub_resource type="Animation" id=4]
resource_name = "box"
length = 1.5
loop = true
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("box:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.18, 0.21, 0.24, 0.27, 0.3, 0.33, 0.36, 0.39, 0.42, 0.45, 0.48, 0.51, 0.54, 0.57, 0.6, 0.63 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -2.0, 3.0, 4.0, 2.0, -4.0, -7.0, 3.0, -5.0, 5.0, 2.0, -6.0, 6.0, 2.0, -6.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("box:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.36, 0.42, 0.45, 0.48, 0.54, 0.57, 0.6, 0.63, 0.66 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 144, 73.5 ), Vector2( 144, 73.5 ), Vector2( 140, 73.5 ), Vector2( 148, 70.5 ), Vector2( 146, 73.5 ), Vector2( 144, 70.5 ), Vector2( 141, 77.5 ), Vector2( 148, 74.5 ), Vector2( 139, 71.5 ), Vector2( 144, 73.5 ), Vector2( 144, 77.5 ), Vector2( 142, 68.5 ), Vector2( 147, 74.5 ), Vector2( 144, 73.5 ), Vector2( 147, 71.5 ), Vector2( 144, 73.5 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "close"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 281, 67 ), Vector2( 281, 750 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.286275 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("../AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("..:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("../..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "congrats"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("congrats:custom_fonts/font:outline_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.11, 0.29 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("congrats:custom_fonts/font:outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.11, 0.21 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.207843 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("congrats:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.07, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("congrats:custom_colors/font_color_shadow")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("congrats:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("congrats:rect_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "openbox"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("box:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 4, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("box:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("box")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("box:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "spawn"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.225, 2 ),
"update": 0,
"values": [ Vector2( -300, 67 ), Vector2( 281, 67 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.286275 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("../AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("box:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 144, 73.5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("..:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.113725, 0.117647, 0.117647, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_color = Color( 0, 0, 0, 0.262745 )
shadow_size = 1
shadow_offset = Vector2( 0, 5 )

[sub_resource type="DynamicFont" id=29]
size = 32
outline_size = 7
outline_color = Color( 1, 1, 1, 0.103922 )
use_filter = true
extra_spacing_bottom = -3
extra_spacing_char = 2
extra_spacing_space = 1
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0, 0.666667, 0.0470588, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=26]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0, 0.709804, 0.0941176, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.12549, 0.847059, 0, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0, 0, 0, 0.184314 )
shadow_size = 2
shadow_offset = Vector2( 0, 5 )

[sub_resource type="DynamicFont" id=27]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 2
extra_spacing_space = 1
font_data = ExtResource( 3 )

[sub_resource type="Gradient" id=25]
colors = PoolColorArray( 0.171875, 1, 0, 1, 0, 0.660156, 0.0257874, 1 )

[sub_resource type="GradientTexture" id=28]
gradient = SubResource( 25 )
width = 300

[node name="Received2" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -630.0
margin_top = -350.0
margin_right = 630.0
margin_bottom = 350.0

[node name="inputlocker" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1319.0
margin_top = -374.0
margin_right = 1319.0
margin_bottom = 374.0
grow_horizontal = 2
grow_vertical = 2

[node name="Received2" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -630.0
margin_top = -350.0
margin_right = 630.0
margin_bottom = 350.0
rect_scale = Vector2( 0.87, 0.87 )
rect_pivot_offset = Vector2( 630, 350 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Received2"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1007.0
margin_top = -493.5
margin_right = 1007.0
margin_bottom = 493.5
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Received2"]
root_node = NodePath("../TextureRect")
anims/box = SubResource( 4 )
anims/close = SubResource( 7 )
anims/congrats = SubResource( 2 )
anims/openbox = SubResource( 5 )
anims/spawn = SubResource( 6 )

[node name="TextureRect" type="TextureRect" parent="Received2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -930.0
margin_top = -283.0
margin_right = -232.0
margin_bottom = 273.999
texture = ExtResource( 1 )
expand = true

[node name="Panel" type="Panel" parent="Received2/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 9 )

[node name="Label" type="Label" parent="Received2/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = 64.0
margin_right = 274.0
margin_bottom = 215.0

[node name="congrats" type="Label" parent="Received2/TextureRect"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -281.0
margin_top = 15.0
margin_right = 279.0
margin_bottom = 96.0
rect_scale = Vector2( 1.2, 1.2 )
rect_pivot_offset = Vector2( 280, 39.5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 29 )
text = "Congrats! These Miscrits were added to your collection!"
align = 1
autowrap = true

[node name="box" type="TextureRect" parent="Received2/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -205.0
margin_right = 205.001
margin_bottom = 205.0
rect_pivot_offset = Vector2( 205, 205 )
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Button" type="Button" parent="Received2/TextureRect"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -142.0
margin_right = 138.0
margin_bottom = 57.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = SubResource( 8 )
disabled = true
text = "Close"

[node name="info" type="Panel" parent="Received2/TextureRect"]
show_behind_parent = true
margin_top = -46.0
margin_right = 206.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 26 )

[node name="Label2" type="Label" parent="Received2/TextureRect/info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
margin_bottom = -24.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 27 )
text = "Common crate"
align = 1
autowrap = true

[node name="TextureRect" type="TextureRect" parent="Received2/TextureRect/info"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 205.0
margin_top = 1.0
margin_right = 70.0
margin_bottom = 139.0
rect_rotation = 90.0
texture = SubResource( 28 )
expand = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Received2"]
stream = ExtResource( 5 )

[connection signal="gui_input" from="Received2/TextureRect" to="Received2" method="_on__gui_input"]
[connection signal="pressed" from="Received2/TextureRect/Button" to="Received2" method="_on_Clsoe_pressed"]
